# game-agent

./: .env.example  README.md  pyproject.toml
src/game_agent/: config.py  droid_portal.py  game_agent.py  llm_api.py  logger.py  main.py  mv_photo.py  nvidia_api.py  screen_ops.py  shimen_task.py
src/game_agent/agent/: core.py  shimen.py
src/game_agent/infra/: adb_device.py
tests/: conftest.py  test_game_agent.py  test_llm_api.py  test_screen_ops.py
